# NukiBlinker

./: .flake8  .gitattributes  .gitignore  Agents.md  CHANGELOG.md  Dockerfile  Makefile  README.md  config.example.yaml  docker-compose.yml  output.test  pyproject.toml  secrets.example.yaml  update.sh
deploy/: README.md  configure-windows-firewall.ps1  install.sh  nukiblinker.service  update.sh
docs/: nuki-bridge-api-1.13.3.md
nukiblinker/: __main__.py  airplay_client.py  audio.py  chromecast_client.py  config.py  deduplication.py  discovery.py  event_log.py  event_router.py  event_validator.py  homekit_service.py  hue_client.py  logging_config.py  network.py  night_mode.py  notifier.py  nuki_client.py  nuki_web_client.py  server.py  support_bundle.py  web_ui.py
script/: cleanup-branches.ps1  cleanup-branches.sh  generate_chime.py  orchestrate-parallel.ps1  orchestrate-parallel.sh  test-and-report.sh  validate.sh  worktree.ps1  worktree.sh
scripts/: test.sh  validate.sh
specs/: product-spec.md  tech-spec.md
support-bundles/: nuki-activity-log-export.csv
tasks/: implementation-plan-v0.3.0.md  lessons.md  pr157_body.md  todo.md
tests/: test_airplay.py  test_audio.py  test_chromecast.py  test_config.py  test_coverage_boost.py  test_coverage_fix.py  test_deduplication.py  test_discovery.py  test_event_log.py  test_event_router.py  test_event_validator.py  test_homekit.py  test_hue_client.py  test_integration_event_pipeline.py  test_lifecycle.py  test_logging_config.py  test_makefile.py  test_new_services_extra.py  test_night_mode.py  test_notifier.py  (+6 more)
(+13 files in other folders)
